<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_left_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_left_order"
            android:icon="@drawable/ic_cart"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_left_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_left_delivery"
            android:icon="@drawable/ic_bag"
            android:title="@string/delivery" />
        <item
            android:id="@+id/nav_left_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
    </group>
</menu>