<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.OrderHistoryFragment">

    <include
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="15dp"
        android:id="@+id/img_no_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_no_order_history"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/txt_no_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_history"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_no_history" />

    <TextView
        android:id="@+id/txt_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/hit_button_order"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_no_history" />

    <Button
        android:id="@+id/btn_start_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_start_ordering"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:text="@string/start_order"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginTop="29dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_des" />
</androidx.constraintlayout.widget.ConstraintLayout>